# linearmodels

./: .codacy.yml  .codebeatignore  .coveragerc  .doctr-files  .flake8  .gitattributes  .gitignore  .lgtm.yml  .travis.yml  LICENSE.md  MANIFEST.in  README.md  README.rst  appveyor.yml  azure-pipelines.yml  changes.html  codecov.yml  compatibility.html  contributing.html  experiment-2.py  experiment.py  experiment2.py  experiment3.py  genindex.html  github_deploy_key.enc  index.html  meson.build  meson.options  objects.inv  plan.html  py-modindex.html  pyproject.toml  references.html  requirements-dev.txt  requirements-test-doc.txt  requirements-test.txt  requirements.txt  search.html  searchindex.js  setup.cfg  (+5 more)
.github/: codeql.yml
.github/workflows/: codeql.yml  cron-test.yml  generate-documentation.yml
_modules/: cached_property.html  collections.html  functools.html  index.html  numpy.html  typing.html
_modules/collections/: abc.html
_modules/linearmodels/: utility.html
_sources/: changes.rst.txt  index.rst.txt
_sources/asset-pricing/: mathematical-formula.rst.txt  models.rst.txt  reference.rst.txt  results.rst.txt
_sources/changes/: 4.0.rst.txt  5.0.rst.txt  6.0.rst.txt  7.0.rst.txt
_sources/compatibility/: linearmodels.compat.statsmodels.Summary.add_extra_txt.rst.txt  linearmodels.compat.statsmodels.Summary.add_table_2cols.rst.txt  linearmodels.compat.statsmodels.Summary.add_table_params.rst.txt  (+5 more)
_sources/iv/: absorbing.rst.txt  (+2 more)
_static/: basic.css  documentation_options.js
asset-pricing/: covariance.html  index.html  introduction.html  mathematical-formula.html  models.html  reference.html  results.html
changes/: 3.0-2.0-1.0.html  4.0.html  5.0.html  6.0.html  7.0.html
ci/: azure-template.yml  azure_template.yml  azure_template_posix.yml  azure_template_windows.yml  install-common.sh  install-from-conda.sh  install-from-pypi.sh  install-posix.sh  install-prerelease.sh  push-docs-gh-pages.sh
compatibility/: linearmodels.compat.statsmodels.Summary.add_extra_txt.html  linearmodels.compat.statsmodels.Summary.add_table_2cols.html  linearmodels.compat.statsmodels.Summary.add_table_params.html  linearmodels.compat.statsmodels.Summary.as_csv.html  linearmodels.compat.statsmodels.Summary.as_html.html  linearmodels.compat.statsmodels.Summary.as_latex.html  linearmodels.compat.statsmodels.Summary.as_text.html  linearmodels.compat.statsmodels.Summary.html
devel/: .buildinfo  .doctr-files  changes.html  compatibility.html  contributing.html  genindex.html  index.html  objects.inv  plan.html  py-modindex.html  references.html  search.html  searchindex.js  sitemap.xml  types.html  utility.html
doc/: .doctr-files  Makefile  changes.html  contributing.html  genindex.html  index.html  make.bat  objects.inv  plan.html  py-modindex.html  references.html  requirements.txt  rtd-requirements.txt  search.html  searchindex.js  utility.html
examples/: asset-pricing_examples.ipynb  asset-pricing_formulas.ipynb  iv_absorbing-regression.ipynb  iv_advanced-examples.ipynb  iv_basic-examples.ipynb  iv_instrumental-variable-estimation.ipynb  iv_using-formulas.ipynb  iv_wooldridge-iv-estimation.ipynb  panel_data-formats.ipynb  panel_examples.ipynb  panel_using-formulas.ipynb  system_examples.ipynb  system_formulas.ipynb  system_three-stage-least-squares.ipynb  system_three-stage-ls.ipynb
iv/: absorbing.html  covariance.html  gmm.html  index.html  introduction.html  mathematical-formula.html  methods.html  reference.html  results.html
linearmodels/: __init__.py  _version.py  azure-pipelines.yml  conftest.py  formula.py  meson.build  py.typed  utility.py
panel/: __init__.py  _version.py  covariance.html  covariance.py  data.html  data.py  dummy_iterator.py  faq.html  fixed_effects.py  index.html  introduction.html  iv.py  lm.py  mathematical-formula.html  models.html  pandas.html  reference.html  results.html  utility.py
system/: covariance.html  gmm-weights.html  index.html  mathematical-formula.html  models.html  reference.html  results.html
utility/: linearmodels.shared.covariance.cov_cluster.html  linearmodels.shared.covariance.cov_kernel.html  linearmodels.shared.covariance.group_debias_coefficient.html  linearmodels.shared.hypotheses.InvalidTestStatistic.critical_values.html  linearmodels.shared.hypotheses.InvalidTestStatistic.html  linearmodels.shared.hypotheses.InvalidTestStatistic.null.html  linearmodels.shared.hypotheses.InvalidTestStatistic.pval.html  linearmodels.shared.hypotheses.InvalidTestStatistic.stat.html  linearmodels.shared.hypotheses.WaldTestStatistic.critical_values.html  linearmodels.shared.hypotheses.WaldTestStatistic.html  linearmodels.shared.hypotheses.WaldTestStatistic.null.html  linearmodels.shared.hypotheses.WaldTestStatistic.pval.html  linearmodels.shared.hypotheses.WaldTestStatistic.stat.html  linearmodels.shared.utility.AttrDict.clear.html  linearmodels.shared.utility.AttrDict.copy.html  linearmodels.shared.utility.AttrDict.get.html  linearmodels.shared.utility.AttrDict.html  linearmodels.shared.utility.AttrDict.items.html  linearmodels.shared.utility.AttrDict.keys.html  linearmodels.shared.utility.AttrDict.pop.html  linearmodels.shared.utility.AttrDict.popitem.html  linearmodels.shared.utility.AttrDict.setdefault.html  linearmodels.shared.utility.AttrDict.update.html  linearmodels.shared.utility.AttrDict.values.html  linearmodels.utility.AttrDict.clear.html  linearmodels.utility.AttrDict.copy.html  linearmodels.utility.AttrDict.get.html  linearmodels.utility.AttrDict.html  linearmodels.utility.AttrDict.items.html  linearmodels.utility.AttrDict.keys.html  linearmodels.utility.AttrDict.pop.html  linearmodels.utility.AttrDict.popitem.html  linearmodels.utility.AttrDict.setdefault.html  linearmodels.utility.AttrDict.update.html  linearmodels.utility.AttrDict.values.html  linearmodels.utility.InvalidTestStatistic.critical_values.html  linearmodels.utility.InvalidTestStatistic.html  linearmodels.utility.InvalidTestStatistic.null.html  linearmodels.utility.InvalidTestStatistic.pval.html  linearmodels.utility.InvalidTestStatistic.stat.html  (+5 more)
(+4068 files in other folders)
